--- a/roles/wireless/templates/wpa_supplicant.conf.j2
+++ b/roles/wireless/templates/wpa_supplicant.conf.j2
@@ -1,7 +1,7 @@
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
 network={
-  ssid={{ ssid }}
-  psk={{ psk }}
-  id_str={{ wireless_conf }}
+  ssid="{{ ssid }}"
+  psk="{{ psk }}"
+  id_str="{{ wireless_conf }}"
 }
